force-app/main/default/objects/Serv_Privacy_Issue__c/Serv_Privacy_Issue__c.object-meta.xml
<CustomObject>
    <label>Privacy Issue</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>