force-app/main/default/objects/Serv_Privacy_Issue__c/fields/PIPEDA_Principle__c.field-meta.xml
<CustomField>
    <fullName>PIPEDA_Principle__c</fullName>
    <label>PIPEDA Principle</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address Concerns</fullName>
            </value>
            <value>
                <fullName>Be Accountable</fullName>
            </value>
            <value>
                <fullName>Be Accurate</fullName>
            </value>
            <value>
                <fullName>Be Open</fullName>
            </value>
            <value>
                <fullName>Identify the Purpose</fullName>
            </value>
            <value>
                <fullName>Limit Collection</fullName>
            </value>
            <value>
                <fullName>Limit Use. Disclosure and Retention</fullName>
            </value>
            <value>
                <fullName>Obtain Consent</fullName>
            </value>
            <value>
                <fullName>Provide Access</fullName>
            </value>
            <value>
                <fullName>Use Appropriate Safeguards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>