force-app/main/default/objects/Serv_Privacy_Issue__c/fields/Related_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Reason__c</fullName>
    <label>Related Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account, card or ECIF issues</fullName>
            </value>
            <value>
                <fullName>Credit bureau error or inaccuracy</fullName>
            </value>
            <value>
                <fullName>Do not solicit</fullName>
            </value>
            <value>
                <fullName>Email, text or fax issues</fullName>
            </value>
            <value>
                <fullName>Info lost, stolen or given to wrong person</fullName>
            </value>
            <value>
                <fullName>Mail - unopened</fullName>
            </value>
            <value>
                <fullName>Mail - opened, unsealed or wrong info in envelope</fullName>
            </value>
            <value>
                <fullName>Online or mobile banking / cheque imaging</fullName>
            </value>
            <value>
                <fullName>Verbal disclosure</fullName>
            </value>
            <value>
                <fullName>Collection of information</fullName>
            </value>
            <value>
                <fullName>Premises - privacy concern</fullName>
            </value>
            <value>
                <fullName>Premises</fullName>
            </value>
            <value>
                <fullName>PIPEDA request - ERMO use only</fullName>
            </value>
            <value>
                <fullName>Do not use - employee concern</fullName>
            </value>
            <value>
                <fullName>Do not use - data device</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>