force-app/main/default/objects/Serv_Privacy_Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Closed &quot;No Contact&quot;</fullName>
            </value>
            <value>
                <fullName>Closed by Privacy Office</fullName>
            </value>
            <value>
                <fullName>Closed with Client Care Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>