force-app/main/default/objects/Serv_Privacy_Issue__c/recordTypes/Serv_RT_Privacy_Issue.recordType-meta.xml
<RecordType>
    <fullName>Serv_RT_Privacy_Issue</fullName>
    <active>true</active>
    <label>Privacy Issue</label>
</RecordType>