force-app/main/default/objects/Serv_Privacy_Issue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date_Reported__c</columns>
    <columns>Related_Case_Reason__c</columns>
    <columns>Severity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>